# 160_project

./: README.md  main_nat.go
go/: go.mod  go.sum  m.go  main.go  main_1.go
testing/: .gitignore
testing/testing/: Cargo.toml  test_log.xml  test_log2.xml
testing/testing/go/: main.go
testing/testing/go_bridge/: go.mod  main.go
testing/testing/go_bridge/test/: test.go
testing/testing/go_client/: main.go
testing/testing/output/: inventory_logs.xml  inventory_logs_1000.xml  page_response_logs.xml  page_response_logs_1000.xml
testing/testing/src/: categories.rs  file_reader.rs  main.rs  watcher.rs
