[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = {version = "0.31", features = ["async-tokio", "serialize"]}
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
notify = "7.0.0"
serde_json = "1.0.133"
async-nats = "0.38.0"
chrono = "0.4.39"
rand = "0.8.5"
